# basic-payment-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
docs/: api_calls.md  openapi.yml
src/: main.rs
src/api/handlers/: accounts.rs  mod.rs  transactions.rs  users.rs
src/api/middleware/: auth.rs  rate_limit.rs
src/api/routes/: mod.rs
src/base/: config.rs  error.rs  mod.rs  utils.rs
src/base/models/: accounts.rs  transactions.rs  users.rs
src/db/: ddl.sql  mod.rs
src/db/dal/: accounts.rs  transactions.rs  users.rs
