[package]
name = "dodo-assignment-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["macros"] }
axum-extra = { version = "0.9.2", features = ["typed-header"] }
tokio = { version = "1.43.0", features = ["full"] }
deadpool-postgres = "0.12.1"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.5", features = ["trace"] }
argon2 = { version = "0.5.3", features = ["std"] }
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.7", features = ["v4", "serde"] }
rust_decimal = { version = "1.37.1", features = ["db-postgres", "serde"] }
thiserror = "1.0"
dotenv = "0.15"
async-trait = "0.1"